# NyaaPy

./: .gitignore  HOW-TO-CONTRIBUTE.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  python-publish.yml
NyaaPy/: __init__.py  exceptions.py  nyaa.py  nyaapantsu.py  pantsu.py  sites.py  sukebei.py  torrent.py  utils.py  utils_lxml.py
nyaapy/: __init__.py  anime_site.py  magnet.py  nyaa.py  parser.py  sukebei.py  torrent.py  torrent_site.py  utils.py
nyaapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nyaapy/anime/: anime_site.py  base.py
nyaapy/nyaasi/: nyaa.py  sukebei.py
nyaapy/nyaasync/: nyaa.py  sukebei.py
src/: nyaa.py
tests/: test.py  test_pantsu.py  test_sukebei.py
tests/integration/: test_nyaasi.py
